app/src/styles/screens/about.css
.citation{
    margin-top: 3%;
    font-style: italic;
    text-align: center;
    padding-bottom: 1%;
    padding-inline: 20%;
    font-size: 1.2em;
    font-weight: 700;
}

.presentation-sentence {
    padding-bottom: 3%;
    padding-inline: 10%;
    text-indent: 2%;
    color: black;
    font-weight: 500;
    text-align: justify;
}

@media (max-width: 930px) {
    .citation{
        padding-inline: 5%;
        font-size: 1.1em;
    }
    .presentation-sentence {
        padding-bottom: 1%;
        padding-inline: 1%;
        font-size: 0.9em;
    }
}

@media (max-width: 768px) {
    .citation{
        padding-inline: 5%;
        padding-bottom: 2%;
        font-size: 1.3em;
    }
    .presentation-sentence {
        font-size: 1.1em;
        padding-bottom: 3%;
        text-indent: 5%;
    }
    .container-global-about {
        padding-bottom: 15%;
    }
}

